# ChangeLog for media-gfx/sphinxcontrib-blockdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.8.1.ebuild, sphinxcontrib-blockdiag-0.8.3.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.3.ebuild:
  Keyworded amd64.

  15 Jun 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.8.0.ebuild, sphinxcontrib-blockdiag-0.8.1.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.1.ebuild:
  Keyworded amd64.

  08 Jun 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.7.2.ebuild, sphinxcontrib-blockdiag-0.8.0.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.8.0.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.8.3 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.8.3.ebuild:
  Version bump [381].

*sphinxcontrib-blockdiag-0.8.1 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.8.1.ebuild:
  Version bump [371].

*sphinxcontrib-blockdiag-0.8.0 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.8.0.ebuild:
  Version bump [359].

  06 May 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.7.0.ebuild,
  sphinxcontrib-blockdiag-0.7.2.ebuild:
  Keyworded x86.

  06 May 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.7.2.ebuild:
  Keyworded amd64.

*sphinxcontrib-blockdiag-0.7.2 (06 Apr 2011)

  06 Apr 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-blockdiag-0.7.2.ebuild:
  Version bump [311].

  28 Mar 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-blockdiag-0.6.3.ebuild,
  sphinxcontrib-blockdiag-0.7.0.ebuild:
  Keyworded x86.

  28 Mar 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-blockdiag-0.7.0.ebuild:
  Keyworded amd64.
