@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST sphinxcontrib-blockdiag-0.8.3.tar.gz 6221 RMD160 0972754857bab5c966ecab2235629c3d88556903 SHA1 15e188f630bf0dce5ba7052a3b1b312960149822 SHA256 424c449287d9d5c75bac8a93d790dd3acce5861a43bfa492a7287912b4c642e7
+DIST sphinxcontrib-blockdiag-0.9.0.tar.gz 6392 RMD160 e8502259d02f1f9d3be423b12140f6ca178f4c7a SHA1 a2c0a75fed0bc8099f2bb6d5ab31c345efe60c50 SHA256 d10c9e6d8164141c76cd1aeee111167e3fc64633b5e3c7999e0533199c9bb24b
 EBUILD sphinxcontrib-blockdiag-0.8.3.ebuild 619 RMD160 f82558ec55a817a2355495967d01520939cf7452 SHA1 31b3d6d3eeb2e18d9b5e574bd0bd6321d22296cd SHA256 d89ac9e2b06da5437f8cc5fa7155785e8652c03f1a22fda485b3c8606577b23a
-MISC ChangeLog 4850 RMD160 45462a992a64b0d6f06950b176c7388375591a07 SHA1 0c66241ee86183fb3951bb035c89e4cd15b75c4d SHA256 15651f636122c7c3bff7cf26d357626016198f75e2c059ee481e0c1aa3704b29
+EBUILD sphinxcontrib-blockdiag-0.9.0.ebuild 621 RMD160 054b955d27220df9353f28748f0a0d6fd6c71cb0 SHA1 c18e2e4d31eb6e990c28cb657e9d8be8e84375fd SHA256 05d133c555dfb71f292ce510809cc1b90f55ff2af99f0e2a9a75ef18c47e338e
+MISC ChangeLog 5005 RMD160 b8425f74ea1fadb9c1daf1d4b8daea74036db084 SHA1 abb4cf785a081673a5ed7c953310837e8e40001d SHA256 524e7c201bf45412b17625396be80ec75970ca4e2cb1934cb7a453da3ba2805f
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4VsvIACgkQzJrj3cAXR0kvjwCgigFH95JZSTLtL2m2sh1ZBwvL
-i40AoK8J2jZXnQOps2C3s70JtX4MtA/H
-=Rkbq
+iEYEAREKAAYFAk4m9CMACgkQzJrj3cAXR0lySgCeMmGwr6QeQVEIt2y03gwVgHz0
+siYAoK/2hFsBWHISrj0Q67cLq/pu+A2A
+=7ia4
 -----END PGP SIGNATURE-----
