@@ -102,6 +102,8 @@
 * dev-python/github2-0.5.1                    x86 SCHEDULED: <2011-08-19 Fri>
 * dev-python/pdbpp-0.7.2                    amd64 SCHEDULED: <2011-08-19 Fri>
 * dev-python/pdbpp-0.7.2                      x86 SCHEDULED: <2011-08-19 Fri>
+* media-gfx/sphinxcontrib-blockdiag-0.9.0   amd64 SCHEDULED: <2011-08-19 Fri>
+* media-gfx/sphinxcontrib-blockdiag-0.9.0     x86 SCHEDULED: <2011-08-19 Fri>
 * media-gfx/sphinxcontrib-mscgen-0.4        amd64 SCHEDULED: <2011-08-27 Sat>
 * media-gfx/sphinxcontrib-mscgen-0.4          x86 SCHEDULED: <2011-08-27 Sat>
 * www-apps/mnemosyne-0.12                   amd64 SCHEDULED: <2011-10-05 Wed>
