@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sphinxcontrib-blockdiag-0.9.0 (20 Jul 2011)
+
+  20 Jul 2011; James Rowe <jnrowe@gmail.com>
+  +sphinxcontrib-blockdiag-0.9.0.ebuild:
+  Version bump [436].
+
   07 Jul 2011; James Rowe <jnrowe@gmail.com>
   -sphinxcontrib-blockdiag-0.8.1.ebuild, sphinxcontrib-blockdiag-0.8.3.ebuild:
   Keyworded x86.
